--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,1 @@
-<p>
-  sidebar works!
-</p>
+<a routerLink="/add-client" href="#" class="btn btn-success btn-block"><i class="fa fa-plus"> Add New Client</i></a>
