--- a/src/app/components/client-details/client-details.component.html
+++ b/src/app/components/client-details/client-details.component.html
@@ -18,7 +18,29 @@
                 <h4>Client ID: {{id}}</h4>
             </div>
             <div class="col-md-4">
-                <!-- BALANCE GOES HERE -->
+                <h3 class="pull-right">
+                    Balance:
+                    <span
+                        [class.text-danger]="hasBalance"
+                        [class.text-success]="!hasBalance"
+                    >
+                        {{client.balance | currency:"USD":true}}
+                    </span>
+                    <small>
+                        <a (click)="showBalanceUpdateInput = !showBalanceUpdateInput"><i class="fa fa-pencil"></i></a>
+                    </small>
+                </h3>
+                <div class="clearfix">
+                    <form *ngIf="showBalanceUpdateInput" (submit)="updateBalnace(id)" class="form-inline pull-right">
+                        <div class="form-group">
+                            <input type="text" [(ngModel)]="client.balance" name="balance" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-primary">
+                            Submit
+                        </button>
+                    </form>
+                </div>
+                <br>
             </div>
         </div>
 
