--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,3 +1,31 @@
-<p>
-  settings works!
-</p>
+<div class="row">
+  <div class="col-md-6">
+    <a routerLink="/" class="btn btn-link"><i class="fa fa-arrow-circle-o-left">Back to Dashboard</i></a>
+  </div>
+  <div class="col-md-6">
+    
+  </div>
+</div>
+
+<div class="card">
+  <h3 class="card-header">
+    Edit Settings
+  </h3>
+  <div class="card-block">
+    <form (submit)="onSubmit()">
+      <div class="form-group">
+        <label>Allow Registeration</label>
+        <input type="checkbox" [checked]="settings.allowRegisteration" (change)="settings.allowRegisteration = !settings.allowRegisteration" name = "allowRegisteration">
+      </div>
+      <div class="form-group">
+        <label>Disable Balance On Add</label>
+        <input type="checkbox" [checked]="settings.disableBalanceOnAdd" (change)="settings.disableBalanceOnAdd = !settings.disableBalanceOnAdd" name = "disableBalanceOnAdd">
+      </div>
+      <div class="form-group">
+        <label>Disable Balance On Edit</label>
+        <input type="checkbox" [checked]="settings.disableBalanceOnEdit" (change)="settings.disableBalanceOnEdit = !settings.disableBalanceOnEdit" name = "disableBalanceOnEdit">
+      </div>
+      <input type="submit" class="btn btn-primary btn-block" value="Submit">
+    </form>
+  </div>
+</div>
